--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
   <div class="about-me">
    <h1> About me</h1>
    <p>
-I am an allround web developer. I am a senior programmer with good knowledge of front-end techniques. Vitae sapien pellentesque habitant morbi tristique senectus et. Aenean sed adipiscing diam donec adipiscing tristique risus.
+I am an allround web developer.
+I can develope attractive and fully functional websites.
+I am proficient in HTML, CSS, JAVASCRIPT, REACT-JS, REDUX, BOOTSRAP.
+I worked on multiple projects.
+ 
 </p> 
   </div>
   <div class="detailes">
