--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ I worked on multiple projects.
 
 <div class="container">
   <div>
-  <h1>Skills And Knowledge</h1>
+  <h1 class="aligncenter
+  ">Skills And Knowledge</h1>
 <div class="skills">
 
 
@@ -89,7 +90,8 @@ I worked on multiple projects.
 </div>
 <div class="container">
   <div>
-  <h1>Projects</h1>
+  <h1 class="aligncenter
+  ">Projects</h1>
 <div class="pro-container">
    <div class="pro-card">
     <a href="">
@@ -122,7 +124,7 @@ I worked on multiple projects.
 </div>
 <div class="container">
 <div class="service-container" >
-  <h1>Services</h1>
+  <h1 class="aligncenter">Services</h1>
 
 <div class="services">
   <div class="service-card">
