--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Akash Portfolio</title>
+  <link rel="shortcut icon" href="profile photo.png" type="image/x-icon">
+
+  <meta name="description" content="Hello,I am Web-Developer">
 
   <link rel="stylesheet" href="index.css">
 </head>
